Finish H3 overview plot

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-01  \n",
-    "Last modified: 2025-08-20"
+    "Last modified: 2025-08-21"
    ]
   },
   {
@@ -501,53 +501,120 @@
    "source": [
     "# Coding in progress\n",
     "plotinfo = [\n",
-    "    {\"title\": \"Node density\", \"data\": nodesh3, \"column\": \"count\", \"ticks\": [0, 10, 20]},\n",
+    "    {\n",
+    "        \"title\": \"Node density\",\n",
+    "        \"data\": nodesh3,\n",
+    "        \"column\": \"count\",\n",
+    "        \"ticks\": [5, 10, 15],\n",
+    "        \"extend\": \"max\",\n",
+    "        \"vmax\": 15,\n",
+    "    },\n",
     "    {\n",
     "        \"title\": \"Maximum gradient\",\n",
     "        \"data\": edges_max_slope_wmh3,\n",
     "        \"column\": \"max_slope\",\n",
     "        \"ticks\": [0, 5, 10],\n",
+    "        \"extend\": \"max\",\n",
+    "        \"vmax\": 10,\n",
     "    },\n",
     "    {\n",
     "        \"title\": \"Water provision\",\n",
     "        \"data\": edges_has_water_wmh3,\n",
     "        \"column\": \"has_water\",\n",
     "        \"ticks\": [0, 0.5, 1],\n",
+    "        \"extend\": \"neither\",\n",
+    "        \"vmax\": False,\n",
     "    },\n",
     "    {\n",
     "        \"title\": \"POI diversity\",\n",
     "        \"data\": edges_poi_diversity_wmh3,\n",
     "        \"column\": \"poi_diversity\",\n",
     "        \"ticks\": [0, 1, 2, 3],\n",
+    "        \"extend\": \"neither\",\n",
+    "        \"vmax\": False,\n",
+    "    },\n",
+    "    {\n",
+    "        \"data\": nodesh3,\n",
+    "        \"column\": \"count\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"data\": edges_max_slope_wmh3,\n",
+    "        \"column\": \"max_slope\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"data\": edges_has_water_wmh3,\n",
+    "        \"column\": \"has_water\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"data\": edges_poi_diversity_wmh3,\n",
+    "        \"column\": \"poi_diversity\",\n",
     "    },\n",
     "]\n",
     "\n",
-    "fig, axes = plt.subplots(nrows=2, ncols=4, figsize=(14, 6))\n",
+    "fig, axes = plt.subplots(\n",
+    "    nrows=2,\n",
+    "    ncols=4,\n",
+    "    figsize=(640 / PLOTPARAM[\"dpi\"], 440 / PLOTPARAM[\"dpi\"]),\n",
+    "    dpi=PLOTPARAM[\"dpi\"],\n",
+    "    squeeze=True,\n",
+    ")\n",
     "\n",
     "for i, ax in enumerate(axes[0]):  # First row: choropleth maps\n",
-    "    # normalize color\n",
-    "    vmin, vmax = 0, plotinfo[i][\"data\"][plotinfo[i][\"column\"]].max()\n",
+    "    if plotinfo[i][\"vmax\"]:\n",
+    "        vmin, vmax = 0, plotinfo[i][\"vmax\"]\n",
+    "    else:\n",
+    "        vmin, vmax = 0, plotinfo[i][\"data\"][plotinfo[i][\"column\"]].max()\n",
     "    norm = mpl.colors.Normalize(vmin=vmin, vmax=vmax)\n",
+    "\n",
+    "    # https://stackoverflow.com/questions/40982050/how-to-cut-the-unwanted-part-of-a-colorbar\n",
+    "    # Generate colors from original colormap in the range equivalent to [vmin, vamx]\n",
+    "    cmap = plt.get_cmap(\"viridis\")\n",
+    "    colors = cmap(np.linspace(1.0 - (vmax - vmin) / float(vmax), 1, cmap.N))\n",
+    "    # Create a new colormap from those colors\n",
+    "    color_map = mpl.colors.LinearSegmentedColormap.from_list(\"viridis\", colors)\n",
     "\n",
     "    cax = ax.inset_axes([0.8, 0.6, 0.08, 0.35])\n",
     "    # https://matplotlib.org/stable/users/explain/axes/colorbar_placement.html#manual-placement-of-colorbars\n",
     "    plotinfo[i][\"data\"].plot(\n",
     "        column=plotinfo[i][\"column\"],\n",
+    "        linewidth=0.01,\n",
+    "        edgecolor=\"face\",  # https://stackoverflow.com/questions/55759070/geopandas-mapplotlib-how-do-i-plot-without-an-outline-around-any-shape\n",
     "        legend=True,\n",
-    "        legend_kwds={\"ticks\": plotinfo[i][\"ticks\"], \"cmap\": \"viridis\", \"norm\": norm},\n",
+    "        legend_kwds={\n",
+    "            \"ticks\": plotinfo[i][\"ticks\"],\n",
+    "            \"cmap\": color_map,\n",
+    "            \"norm\": norm,\n",
+    "            \"extend\": plotinfo[i][\"extend\"],\n",
+    "        },\n",
     "        cax=cax,\n",
     "        ax=ax,\n",
+    "        vmin=vmin,\n",
+    "        vmax=vmax,\n",
     "    )\n",
-    "\n",
-    "    # cbar.set_clim(0,20)\n",
+    "    if plotinfo[i][\"title\"] == \"Maximum gradient\":\n",
+    "        cax.set_ylim([0, 10])\n",
     "    ax.set_axis_off()\n",
     "    ax.title.set_text(plotinfo[i][\"title\"])\n",
-    "for ax in axes[1]:  # Second row: LISAs\n",
-    "    pass\n",
+    "for i, ax in enumerate(axes[1]):  # Second row: LISAs\n",
+    "    data = plotinfo[i + 4][\"data\"]\n",
+    "    data.to_crs(epsg=25832, inplace=True)\n",
+    "    w = weights.contiguity.Queen.from_dataframe(data, use_index=False)\n",
+    "    lisa = esda.Moran_Local(data[plotinfo[i + 4][\"column\"]], w)\n",
+    "    lisa_cluster(\n",
+    "        lisa,\n",
+    "        data,\n",
+    "        p=0.05,\n",
+    "        ax=ax,\n",
+    "        legend_kwds={\n",
+    "            \"markerscale\": 0.7,\n",
+    "            \"labelspacing\": 0.3,\n",
+    "            \"borderpad\": 0.3,\n",
+    "            \"borderaxespad\": 1.0,\n",
+    "        },\n",
+    "    )\n",
     "\n",
-    "plt.subplots_adjust(\n",
-    "    top=0.93, bottom=0.17, left=0.1, right=0.9, wspace=-0.5, hspace=0.22\n",
-    ")"
+    "plt.subplots_adjust(top=0.9, bottom=0.05, left=0, right=1, wspace=0, hspace=0)\n",
+    "fig.savefig(PATH[\"plot\"] + \"h3.pdf\", facecolor=\"white\", edgecolor=\"none\")"
    ]
   },
   {
