Hatch biggest face polygons automatically

--- a/code/03_basic_statistics.ipynb
+++ b/code/03_basic_statistics.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2025-08-13"
+    "Last modified: 2025-08-21"
    ]
   },
   {
@@ -885,15 +885,12 @@
     "    )\n",
     ")\n",
     "\n",
-    "for faceloopid in [\n",
-    "    3272,\n",
-    "    2385,\n",
-    "    2220,\n",
-    "    2227,\n",
-    "    1874,\n",
-    "]:  # manually set lakes/fjords to too_long_vacuous\n",
+    "fl_sorted = faceloops.iloc[faceloops.geometry.area.argsort().values]\n",
+    "for faceloopid in list(\n",
+    "    fl_sorted.tail(6).index\n",
+    "):  # set the 6 biggest polygons (lakes/fjords) to too_long_vacuous\n",
     "    loops.loc[\n",
-    "        faceloopid - 1, \"length_class\"\n",
+    "        faceloopid, \"length_class\"\n",
     "    ] = \"too_long_vacuous\"  # -1 due to zero-indexing\n",
     "\n",
     "loops.to_file(PATH[\"data_out\"] + f\"faceloops_length_classification.gpkg\", index=False)\n",
@@ -916,7 +913,7 @@
     "        color=PLOTPARAM[\"loop_classification_colors\"][classification],\n",
     "        edgecolor=\"#222222\",\n",
     "        aspect=1,\n",
-    "        linewidth=0.15,\n",
+    "        linewidth=0.12,\n",
     "    )\n",
     "for classification in [\"too_long_vacuous\"]:\n",
     "    df = gpd.read_file(PATH[\"data_out\"] + f\"faceloops_{classification}.gpkg\")\n",
@@ -925,7 +922,7 @@
     "        color=PLOTPARAM[\"loop_classification_colors\"][classification],\n",
     "        edgecolor=\"#222222\",\n",
     "        aspect=1,\n",
-    "        linewidth=0.15,\n",
+    "        linewidth=0.12,\n",
     "        hatch=\"////\",\n",
     "        # hatchcolor = \"#000000\" #doesn't work for some reason. update matplotlib?\n",
     "    )\n",
