Plot degree and facenodes distributions

--- a/code/02_loop_generation.ipynb
+++ b/code/02_loop_generation.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2025-08-08"
+    "Last modified: 2025-08-21"
    ]
   },
   {
@@ -225,10 +225,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h = plt.hist(faceloopnodes, range(18))\n",
-    "plt.title(\"Nodes per faceloop\")\n",
-    "print(h[1])\n",
-    "print(h[0])"
+    "fig = plt.figure(\n",
+    "    figsize=(110 / PLOTPARAM[\"dpi\"], 200 / PLOTPARAM[\"dpi\"]), dpi=PLOTPARAM[\"dpi\"]\n",
+    ")\n",
+    "axes2 = fig.add_axes([0.2, 0.59, 0.65, 0.3])\n",
+    "axes1 = fig.add_axes([0.2, 0.075, 0.65, 0.3])\n",
+    "\n",
+    "axes2.hist(\n",
+    "    [val for (node, val) in Gnx.degree()], density=True, bins=[2, 3, 4, 5], align=\"left\"\n",
+    ")\n",
+    "axes2.set_title(\"Degree distribution\")\n",
+    "axes2.set_xticks([2, 3, 4])\n",
+    "axes2.set_ylim([0, 1])\n",
+    "axes2.plot([3, 3], [0, 1], \"k:\")\n",
+    "\n",
+    "axes1.hist(faceloopnodes, range(16), density=True, align=\"left\")\n",
+    "axes1.set_title(\"Nodes per faceloop\")\n",
+    "axes1.set_xticks([0, 3, 6, 9, 12, 15])\n",
+    "axes1.set_xlim([0, 15])\n",
+    "axes1.set_ylim([0, 0.275])\n",
+    "axes1.plot([6, 6], [0, 1], \"k:\")\n",
+    "\n",
+    "# plt.subplots_adjust(left=0.1, right=0.95, bottom=0.1, top=0.95)\n",
+    "fig.savefig(PATH[\"plot\"] + \"degreefacenodes\" + \".\" + PLOTPARAM[\"format\"]);"
    ]
   },
   {
