Add link length calculation

--- a/code/03_basic_statistics.ipynb
+++ b/code/03_basic_statistics.ipynb
@@ -499,6 +499,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33df8132-18ad-40b2-b5d0-cb3a93584bed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ll = np.array(linklengths)\n",
+    "sum(ll[ll < LINK_LIMIT[0] / 1000]) / sum(ll)  # Percent of length of too short links"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "aaff81fc-9566-4e57-a9b5-dee761bd4b65",
    "metadata": {},
