Move back plotstyle to individual notebooks

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -40,7 +40,8 @@
    "source": [
     "%run -i setup_parameters.py\n",
     "load_data = True  # Set to False if data are huge and have already been loaded\n",
-    "debug = False  # Set to True for extra plots and verbosity"
+    "debug = False  # Set to True for extra plots and verbosity\n",
+    "plt.style.use(PATH[\"parameters\"] + \"plotstyle.mplstyle\")"
    ]
   },
   {
