--- a/code/03_basic_statistics.ipynb
+++ b/code/03_basic_statistics.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2025-08-21"
+    "Last modified: 2025-08-25"
    ]
   },
   {
@@ -355,6 +355,7 @@
     "    None,\n",
     "    edges,\n",
     "    link_width=0,\n",
+    "    subplotlabel=\"a\",\n",
     ")\n",
     "\n",
     "for classification in edges.length_class.unique():\n",
@@ -365,6 +366,7 @@
     "        aspect=1,\n",
     "        linewidth=PLOTPARAM[\"edge_classification_linewidths\"][classification],\n",
     "    )\n",
+    "\n",
     "\n",
     "xmax = 12\n",
     "axes = fig.add_axes([0.64, 0.69, 0.31, 0.25])\n",
@@ -915,6 +917,7 @@
     "    None,\n",
     "    edges,\n",
     "    link_width=0,\n",
+    "    subplotlabel=\"b\",\n",
     ")\n",
     "\n",
     "for classification in loops.length_class.unique():\n",
@@ -1135,6 +1138,7 @@
     "    None,\n",
     "    edges,\n",
     "    link_width=0,\n",
+    "    subplotlabel=\"c\",\n",
     ")\n",
     "\n",
     "for classification in edges.maxslope_class.unique():\n",
@@ -1307,6 +1311,7 @@
     "    None,\n",
     "    edges,\n",
     "    link_width=0,\n",
+    "    subplotlabel=\"d\",\n",
     ")\n",
     "\n",
     "for classification in edges.poi_diversity.unique():\n",
