--- a/code/04_scenario_analysis.ipynb
+++ b/code/04_scenario_analysis.ipynb
@@ -25,7 +25,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-25  \n",
-    "Last modified: 2025-08-07"
+    "Last modified: 2025-08-25"
    ]
   },
   {
@@ -239,6 +239,9 @@
     "    vertex_color=vertex_colors,\n",
     "    link_width=0.3,\n",
     "    link_color=PLOTPARAM[\"color\"][\"neutral\"],\n",
+    "    subplotlabel=\"a\",\n",
+    "    subplotlabelx=0.03,\n",
+    "    subplotlabely=0.925,\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=1)\n",
     "plot_dk_inset(fig, allloops_dict[SCENARIOID][0], 8, 7800)\n",
@@ -298,6 +301,9 @@
     "    vertex_color=vertex_colors,\n",
     "    link_width=link_widths,\n",
     "    link_color=link_colors,\n",
+    "    subplotlabel=\"b\",\n",
+    "    subplotlabelx=0.03,\n",
+    "    subplotlabely=0.925,\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=2)\n",
     "plot_dk_inset(fig, allloops_dict[SCENARIOID][1], 8, 7800)\n",
@@ -351,6 +357,10 @@
     "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
     "    threshold_good=1,\n",
     ")\n",
+    "if SCENARIO[\"name\"] == \"Family with e-bikes\":\n",
+    "    spl = \"\"\n",
+    "else:\n",
+    "    spl = \"a\"\n",
     "fig, ax = plot_dk_gdf(\n",
     "    nodes,\n",
     "    edges,\n",
@@ -359,6 +369,9 @@
     "    vertex_color=vertex_colors,\n",
     "    link_width=link_widths,\n",
     "    link_color=link_colors,\n",
+    "    subplotlabel=spl,\n",
+    "    subplotlabelx=0.03,\n",
+    "    subplotlabely=0.925,\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=3)\n",
     "plot_dk_inset(fig, allloops_dict[SCENARIOID][2], 8, 7800)\n",
@@ -415,6 +428,10 @@
     "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
     "    threshold_good=3,\n",
     ")\n",
+    "if SCENARIO[\"name\"] == \"Family with e-bikes\":\n",
+    "    spl = \"\"\n",
+    "else:\n",
+    "    spl = \"b\"\n",
     "fig, ax = plot_dk_gdf(\n",
     "    nodes,\n",
     "    edges,\n",
@@ -423,6 +440,9 @@
     "    vertex_color=vertex_colors,\n",
     "    link_width=link_widths,\n",
     "    link_color=link_colors,\n",
+    "    subplotlabel=spl,\n",
+    "    subplotlabelx=0.03,\n",
+    "    subplotlabely=0.925,\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=4)\n",
     "plot_dk_inset(fig, allloops_dict[SCENARIOID][3], 8, 7800)\n",
