--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-01  \n",
-    "Last modified: 2025-08-21"
+    "Last modified: 2025-08-25"
    ]
   },
   {
@@ -507,6 +507,7 @@
     "        \"ticks\": [5, 10, 15],\n",
     "        \"extend\": \"max\",\n",
     "        \"vmax\": 15,\n",
+    "        \"subplotlabel\": \"a\",\n",
     "    },\n",
     "    {\n",
     "        \"title\": \"Maximum gradient\",\n",
@@ -515,6 +516,7 @@
     "        \"ticks\": [0, 5, 10],\n",
     "        \"extend\": \"max\",\n",
     "        \"vmax\": 10,\n",
+    "        \"subplotlabel\": \"b\",\n",
     "    },\n",
     "    {\n",
     "        \"title\": \"Water provision\",\n",
@@ -523,6 +525,7 @@
     "        \"ticks\": [0, 0.5, 1],\n",
     "        \"extend\": \"neither\",\n",
     "        \"vmax\": False,\n",
+    "        \"subplotlabel\": \"c\",\n",
     "    },\n",
     "    {\n",
     "        \"title\": \"POI diversity\",\n",
@@ -531,22 +534,27 @@
     "        \"ticks\": [0, 1, 2, 3],\n",
     "        \"extend\": \"neither\",\n",
     "        \"vmax\": False,\n",
+    "        \"subplotlabel\": \"d\",\n",
     "    },\n",
     "    {\n",
     "        \"data\": nodesh3,\n",
     "        \"column\": \"count\",\n",
+    "        \"subplotlabel\": \"e\",\n",
     "    },\n",
     "    {\n",
     "        \"data\": edges_max_slope_wmh3,\n",
     "        \"column\": \"max_slope\",\n",
+    "        \"subplotlabel\": \"f\",\n",
     "    },\n",
     "    {\n",
     "        \"data\": edges_has_water_wmh3,\n",
     "        \"column\": \"has_water\",\n",
+    "        \"subplotlabel\": \"g\",\n",
     "    },\n",
     "    {\n",
     "        \"data\": edges_poi_diversity_wmh3,\n",
     "        \"column\": \"poi_diversity\",\n",
+    "        \"subplotlabel\": \"h\",\n",
     "    },\n",
     "]\n",
     "\n",
@@ -594,6 +602,14 @@
     "        cax.set_ylim([0, 10])\n",
     "    ax.set_axis_off()\n",
     "    ax.title.set_text(plotinfo[i][\"title\"])\n",
+    "    ax.text(\n",
+    "        0.1,\n",
+    "        0.9,\n",
+    "        plotinfo[i][\"subplotlabel\"],\n",
+    "        weight=\"bold\",\n",
+    "        size=9,\n",
+    "        transform=ax.transAxes,\n",
+    "    )\n",
     "for i, ax in enumerate(axes[1]):  # Second row: LISAs\n",
     "    data = plotinfo[i + 4][\"data\"]\n",
     "    data.to_crs(epsg=25832, inplace=True)\n",
@@ -610,6 +626,14 @@
     "            \"borderpad\": 0.3,\n",
     "            \"borderaxespad\": 1.0,\n",
     "        },\n",
+    "    )\n",
+    "    ax.text(\n",
+    "        0.1,\n",
+    "        0.9,\n",
+    "        plotinfo[i + 4][\"subplotlabel\"],\n",
+    "        weight=\"bold\",\n",
+    "        size=9,\n",
+    "        transform=ax.transAxes,\n",
     "    )\n",
     "\n",
     "plt.subplots_adjust(top=0.95, bottom=0, left=0, right=1, wspace=0, hspace=0)\n",
