Update subplot labels

--- a/code/02_loop_generation.ipynb
+++ b/code/02_loop_generation.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2025-08-25"
+    "Last modified: 2025-08-29"
    ]
   },
   {
@@ -238,7 +238,7 @@
     "axes2.set_xticks([2, 3, 4])\n",
     "axes2.set_ylim([0, 1])\n",
     "axes2.plot([3, 3], [0, 1], \"k:\")\n",
-    "axes2.text(-0.29, 1.13, \"b\", transform=axes2.transAxes, weight=\"bold\", size=9)\n",
+    "axes2.text(-0.29, 1.13, \"a\", transform=axes2.transAxes, weight=\"bold\", size=9)\n",
     "\n",
     "axes1.hist(faceloopnodes, range(16), density=True, align=\"left\")\n",
     "axes1.set_title(\"Face nodes\")\n",
@@ -246,7 +246,7 @@
     "axes1.set_xlim([0, 15])\n",
     "axes1.set_ylim([0, 0.275])\n",
     "axes1.plot([6, 6], [0, 1], \"k:\")\n",
-    "axes1.text(-0.29, 1.13, \"c\", transform=axes1.transAxes, weight=\"bold\", size=9)\n",
+    "axes1.text(-0.29, 1.13, \"b\", transform=axes1.transAxes, weight=\"bold\", size=9)\n",
     "\n",
     "# plt.subplots_adjust(left=0.1, right=0.95, bottom=0.1, top=0.95)\n",
     "fig.savefig(PATH[\"plot\"] + \"degreefacenodes\" + \".\" + PLOTPARAM[\"format\"]);"
