--- a/code/07_synthetic_network_analysis.ipynb
+++ b/code/07_synthetic_network_analysis.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-28  \n",
-    "Last modified: 2025-08-25"
+    "Last modified: 2025-08-29"
    ]
   },
   {
@@ -248,7 +248,7 @@
     "    Gnx_synth[gtype][gsize][\"nodes\"].plot(ax=axs[i])\n",
     "    Gnx_synth[gtype][gsize][\"links\"].plot(ax=axs[i])\n",
     "    axs[i].set_axis_off()\n",
-    "    axs[i].text(0.01, 0.95, \"d\", transform=axs[i].transAxes, weight=\"bold\", size=9)"
+    "    axs[i].text(0.01, 0.95, \"c\", transform=axs[i].transAxes, weight=\"bold\", size=9)"
    ]
   },
   {
