--- a/code/04_scenario_analysis.ipynb
+++ b/code/04_scenario_analysis.ipynb
@@ -357,7 +357,7 @@
     "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
     "    threshold_good=1,\n",
     ")\n",
-    "if SCENARIO[\"name\"] == \"Family with e-bikes\":\n",
+    "if SCENARIO[SCENARIOID][\"name\"] == \"Family with e-bikes\":\n",
     "    spl = \"\"\n",
     "else:\n",
     "    spl = \"a\"\n",
@@ -428,7 +428,7 @@
     "    threshold_bad=SCENARIO[SCENARIOID][\"maxslope_limit\"],\n",
     "    threshold_good=3,\n",
     ")\n",
-    "if SCENARIO[\"name\"] == \"Family with e-bikes\":\n",
+    "if SCENARIO[SCENARIOID][\"name\"] == \"Family with e-bikes\":\n",
     "    spl = \"\"\n",
     "else:\n",
     "    spl = \"b\"\n",
