Save degree distribution pre and post processing

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -24,7 +24,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-01  \n",
-    "Last modified: 2025-08-07"
+    "Last modified: 2025-09-10"
    ]
   },
   {
@@ -201,7 +201,8 @@
     "    )\n",
     "    G.vs[v.index][\"y\"] = round(\n",
     "        nodes.loc[nodes[\"nodeID\"] == v[\"name\"]].iloc[0].geometry.y + delta[1], 3\n",
-    "    )"
+    "    )\n",
+    "degreedistrib_to_csv(Counter(G.degree()), PATH[\"data_out\"] + \"degreedistrib_pre.csv\")"
    ]
   },
   {
@@ -559,6 +560,16 @@
    "outputs": [],
    "source": [
     "G.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47da0962-13b8-45f0-a977-15f30fa07eac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degreedistrib_to_csv(Counter(G.degree()), PATH[\"data_out\"] + \"degreedistrib_post.csv\")"
    ]
   },
   {
