--- a/code/01_poi_snapping.ipynb
+++ b/code/01_poi_snapping.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-07  \n",
-    "Last modified: 2025-08-13"
+    "Last modified: 2025-09-10"
    ]
   },
   {
@@ -99,12 +99,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Merge graphs\n",
+    "# Merge graphs and degree distributions\n",
     "Gnx = nx.empty_graph()\n",
+    "degreedistrib_pre = Counter()\n",
     "for subarea in STUDY_AREA_COMBINED[STUDY_AREA]:\n",
     "    with lzma.open(PATH[subarea][\"data_out\"] + \"network_preprocessed0.xz\", \"rb\") as f:\n",
     "        G_new = pickle.load(f)\n",
     "        Gnx = nx.disjoint_union(Gnx, G_new.to_networkx())\n",
+    "    with open(PATH[subarea][\"data_out\"] + \"degreedistrib_pre.csv\", \"r\") as csvfile:\n",
+    "        csvreader = csv.reader(csvfile)\n",
+    "        degrees = next(csvreader)\n",
+    "        counts = next(csvreader)\n",
+    "        for degree, count in zip(degrees, counts):\n",
+    "            degreedistrib_pre[int(degree)] += int(count)\n",
     "\n",
     "# Load POIs\n",
     "pois = load_pois()\n",
@@ -349,6 +356,20 @@
    "metadata": {},
    "source": [
     "## Save preprocessed network data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9e9f9be-8e40-4013-aceb-6f3e1f8c77af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save merged degree distribution before preprocessing\n",
+    "degreedistrib_to_csv(degreedistrib_pre, PATH[\"data_out\"] + \"degreedistrib_pre.csv\")\n",
+    "\n",
+    "# Save merged degree distribution after preprocessing\n",
+    "degreedistrib_to_csv(Counter(G.degree()), PATH[\"data_out\"] + \"degreedistrib_post.csv\")"
    ]
   },
   {
