--- a/code/02_loop_generation.ipynb
+++ b/code/02_loop_generation.ipynb
@@ -20,7 +20,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2025-08-29"
+    "Last modified: 2025-09-10"
    ]
   },
   {
@@ -235,7 +235,8 @@
     "    [val for (node, val) in Gnx.degree()], density=True, bins=[2, 3, 4, 5], align=\"left\"\n",
     ")\n",
     "axes2.set_title(\"Node degree\")\n",
-    "axes2.set_xticks([2, 3, 4])\n",
+    "axes2.set_xticks([2, 3, 4, 5])\n",
+    "axes2.set_xlim([1.25, 5.75])\n",
     "axes2.set_ylim([0, 1])\n",
     "axes2.plot([3, 3], [0, 1], \"k:\")\n",
     "axes2.text(-0.29, 1.13, \"a\", transform=axes2.transAxes, weight=\"bold\", size=9)\n",
