nb02: comment out undefined numloops var (solves issue #18)

--- a/code/02_loop_generation.ipynb
+++ b/code/02_loop_generation.ipynb
@@ -362,7 +362,7 @@
     "    pickle.dump(LOOP_NUMNODE_BOUND, f)\n",
     "    pickle.dump(nodes_id, f)\n",
     "    pickle.dump(nodes_coords, f)\n",
-    "    pickle.dump(numloops, f)\n",
+    "    #pickle.dump(numloops, f)\n",
     "    pickle.dump(faceloops, f)"
    ]
   }
@@ -371,7 +371,7 @@
   "kernelspec": {
    "display_name": "bikenwloops",
    "language": "python",
-   "name": "bikenwloops"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
