comment out numloops var (cf #18)

--- a/code/03_basic_statistics.ipynb
+++ b/code/03_basic_statistics.ipynb
@@ -116,7 +116,7 @@
     "        LOOP_NUMNODE_BOUND = pickle.load(f)\n",
     "        nodes_id = pickle.load(f)\n",
     "        nodes_coords = pickle.load(f)\n",
-    "        numloops = pickle.load(f)\n",
+    "        #numloops = pickle.load(f)\n",
     "        faceloops = pickle.load(f)"
    ]
   },
@@ -557,7 +557,7 @@
     "axes2.set_xlim([0, LOOP_NUMNODE_BOUND + 0.5])\n",
     "\n",
     "plt.text(LOOP_NUMNODE_BOUND / 20, 0.01, \"Bound: \" + str(LOOP_NUMNODE_BOUND))\n",
-    "plt.text(LOOP_NUMNODE_BOUND / 20, 0.04, \"Loops: \" + str(numloops));"
+    "#plt.text(LOOP_NUMNODE_BOUND / 20, 0.04, \"Loops: \" + str(numloops));"
    ]
   },
   {
@@ -596,7 +596,7 @@
     "    axes2.set_xlim([0, LOOP_NUMNODE_BOUND + 0.5])\n",
     "\n",
     "    plt.text(LOOP_NUMNODE_BOUND / 20, 0.01, \"Bound: \" + str(LOOP_NUMNODE_BOUND))\n",
-    "    plt.text(LOOP_NUMNODE_BOUND / 20, 0.04, \"Loops: \" + str(numloops))\n",
+    "    #plt.text(LOOP_NUMNODE_BOUND / 20, 0.04, \"Loops: \" + str(numloops))\n",
     "else:\n",
     "    print(\"No loops found at number of nodes bound \" + str(LOOP_NUMNODE_BOUND))"
    ]
