fix pandas error (setting value of copy)

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -134,7 +134,7 @@
     "        LOOP_NUMNODE_BOUND = pickle.load(f)\n",
     "        nodes_id = pickle.load(f)\n",
     "        nodes_coords = pickle.load(f)\n",
-    "        numloops = pickle.load(f)\n",
+    "        #numloops = pickle.load(f)\n",
     "        faceloops = pickle.load(f)"
    ]
   },
@@ -267,8 +267,8 @@
    "outputs": [],
    "source": [
     "edges_length = edgesh3[[\"weight\", \"geometry\"]]\n",
-    "edges_max_slope = edgesh3[[\"weight\", \"max_slope\", \"geometry\"]]\n",
-    "edges_has_water = edgesh3[[\"weight\", \"has_water\", \"geometry\"]]\n",
+    "edges_max_slope = edgesh3[[\"weight\", \"max_slope\", \"geometry\"]].copy()\n",
+    "edges_has_water = edgesh3[[\"weight\", \"has_water\", \"geometry\"]].copy()\n",
     "edges_has_water[\"has_water\"] = edges_has_water[\"has_water\"].astype(\n",
     "    int\n",
     ")  # Turn True/False into 1/0\n",
@@ -1245,7 +1245,7 @@
   "kernelspec": {
    "display_name": "bikenwloops",
    "language": "python",
-   "name": "bikenwloops"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
