--- a/code/07_synthetic_network_analysis.ipynb
+++ b/code/07_synthetic_network_analysis.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fb810d3b-192d-47d8-8d62-d699be65bcad",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9a407c7e",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,19 @@
    "execution_count": null,
    "id": "588b162f-d994-4dfd-8453-c9ba5978863f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "EOFError",
+     "evalue": "Ran out of input",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 24\u001b[0m\n\u001b[1;32m     22\u001b[0m nodes_coords \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[1;32m     23\u001b[0m numloops \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[0;32m---> 24\u001b[0m faceloops \u001b[38;5;241m=\u001b[39m \u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mEOFError\u001b[0m: Ran out of input"
+     ]
+    }
+   ],
    "source": [
     "if load_data:\n",
     "    if LOOP_LENGTH_BOUND:\n",
@@ -100,7 +112,7 @@
     "        LOOP_NUMNODE_BOUND = pickle.load(f)\n",
     "        nodes_id = pickle.load(f)\n",
     "        nodes_coords = pickle.load(f)\n",
-    "        numloops = pickle.load(f)\n",
+    "        #numloops = pickle.load(f)\n",
     "        faceloops = pickle.load(f)"
    ]
   },
@@ -430,7 +442,7 @@
   "kernelspec": {
    "display_name": "bikenwloops",
    "language": "python",
-   "name": "bikenwloops"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
